made bottoken a seperate file